added save user type owner and updated config openapi
